Code cleanup (Lighthouse).

--- a/manifest.json
+++ b/manifest.json
@@ -2,5 +2,7 @@
   "name": "Komito Analytics",
   "short_name": "Komito Analytics",
   "description": "Komito Analytics is an enhancement for the most popular web analytics software.",
-  "lang": "en"
+  "lang": "en",
+  "background_color": "#FFFFFF",
+  "theme_color": "#FFFFFF"
 }
