--- a/package.json
+++ b/package.json
@@ -1,23 +1,34 @@
 {
   "name": "komito-analytics",
-  "version": "4.2.0",
+  "version": "5.0.0",
   "description": "Komito Analytics is a free, open-source enhancement for the most popular web analytics software.",
-  "keywords": ["analytics", "google-analytics", "event-tracking", "adobe-analytics", "clicktale", "baidu-analytics", "media-tracking", "komito-analytics", "particles-analytics"],
   "homepage": "https://komito.net",
+  "repository": "github:Datamart/Komito",
+  "license": "Apache-2.0",
   "bugs": {
     "url": "https://github.com/Datamart/Komito/issues",
-    "email" : "support@komito.net"
-  },
-  "license": {
-    "type": "Apache-2.0",
-    "url": "https://github.com/Datamart/Komito/blob/master/LICENSE"
-  },
-  "repository": {
-    "type" : "git",
-    "url" : "https://github.com/Datamart/Komito.git"
+    "email": "support@komito.net"
   },
   "scripts": {
     "build": "./build/build.sh"
   },
-  "os" : ["darwin", "linux"]
+  "author": {
+    "name": "Valentin Podkamennyi",
+    "email": "valentin@dtm.io",
+    "url": "https://vpodk.com/"
+  },
+  "dependencies": {
+    "glize": "^21.2.2"
+  },
+  "keywords": [
+    "analytics",
+    "google-analytics",
+    "event-tracking",
+    "adobe-analytics",
+    "clicktale",
+    "baidu-analytics",
+    "media-tracking",
+    "komito-analytics",
+    "particles-analytics"
+  ]
 }
